# bachelor-thesis

./: .gitignore  README.md  failures_with_reasons.csv  pyproject.toml
analysis/: failure_analysis.py  performance_per_feature.py  performance_per_representation.py  tables.py
folfailures/: SWDE_failures.csv  SWDE_failures_with_reasons.csv  WDC1000_failures.csv  WDC1000_failures_with_reasons.csv  old_failures.csv  old_failures_with_reasons.csv
information_extraction/: config.py  dtypes.py
information_extraction/analysis/: closed_to_open_mapping.json  mappings.py  stats.py  tables.py
information_extraction/data/: __init__.py  ground_truths.py
information_extraction/evaluation/: __init__.py  evaluator.py  openie.py
information_extraction/preprocessing/: data_split.py
information_extraction/util/: multiprocessing.py
preprocessing/: add_positions_to_html.py  preprocess_html.py  preprocess_text.py  random_split.py  train_val_test_split.py  webke_split.py  webke_split_mapping.json  zero_shot_split.py
preprocessing/feature_extraction/: base.py  html.py  text.py
scripts/analysis/: analyse_context_sizes.py  analyse_failures.py  analyse_full_results.py  analyse_representations.py  analyse_sweep.py  analyse_webke.py  analyse_zero_shot.py  generate_results.sh  map_webke_to_original_docids.py  print_attribute_mapping.py
scripts/preprocessing/: add_positions_to_html.py  perform_data_split.py  perform_preprocessing.py
training/: config-defaults.yaml  evaluation.py  metrics.py  outputs.py  second-sweep.yaml  train.py  try_html_representation.py
(+83 files in other folders)
